--- a/src/components/TransactionHistory/TransactionHistory.module.css
+++ b/src/components/TransactionHistory/TransactionHistory.module.css
@@ -2,15 +2,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 100px;
-    padding: 30px 0px;
+    padding-bottom: 60px;
     text-align: center;
 }
 
 .wrapper {
     background-color: rgb(255, 255, 255);
     width: 600px;
-    margin: 0px auto 100px;
+    margin: 0px auto;
     padding: 30px;
     border-radius: 10px;
     box-shadow: rgb(65, 64, 64) 1rem 1rem 2rem, rgb(82, 81, 81) -1rem -1rem 2rem;
