--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -5,35 +5,38 @@
     align-items: center;
     padding: 10px 20px;
     background-color: rgb(255, 255, 255);
-    width: 350px;
+    max-width: 600px;
     margin: 0px auto 100px;
     padding: 30px 0px;
     border-radius: 10px;
     box-shadow: rgb(65, 64, 64) 1rem 1rem 2rem, rgb(82, 81, 81) -1rem -1rem 2rem;
 }
 
-
-
-.wrapper {
+.list {
     display: flex;
-    width: 300px;
+    gap: 15px;
+
+}
+
+
+.item {
+    display: flex;
+    flex-direction: column;
+    width: calc((100% - 60px) / 5);
+    /* width: 300px; */
     background-color: rgb(248, 240, 240);
     align-items: center;
     margin: 0px auto;
-    padding: 10px;
+    padding: 20px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.14) 0px 1px 1px, rgba(0, 0, 0, 0.2) 0px 2px 1px;
-}
-
-.wrapper:not(:last-child){
-    margin-bottom: 20px;
 }
 
 .span {
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    margin-right: 10px;
+    /* margin-right: 10px; */
     background-color: red;
 }
 
@@ -41,7 +44,7 @@
     width: 60px;
     height: 60px;
     padding: 7px;
-    margin-right: 40px;
+    margin-bottom: 20px;
     background-color: rgb(236, 219, 219);
     border-radius: 8px;
     box-shadow: rgba(0, 0, 0, 0.12) 1px 2px 1px, rgba(0, 0, 0, 0.14) 1px 2px 2px, rgba(0, 0, 0, 0.2) 0px 1px 3px;
@@ -50,4 +53,26 @@
 .text {
     font-size: 19px;
     line-height: 1.54;
+    margin-bottom: 10px;
+}
+
+.textStatus {
+    font-size: 19px;
+    line-height: 1.54;
+}
+
+.textStatus.info {
+    color: blue;
+}
+
+.textStatus.success {
+    color: green;
+}
+
+.textStatus.error {
+    color: red;
+}
+
+.textStatus.warning {
+    color: orange;
 }
