add color for friendList

--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -61,18 +61,10 @@
     line-height: 1.54;
 }
 
-.textStatus.info {
-    color: blue;
-}
-
-.textStatus.success {
+.online {
     color: green;
 }
 
-.textStatus.error {
+.offline {
     color: red;
-}
-
-.textStatus.warning {
-    color: orange;
 }
